--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "nanoid": "^3.3.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
