--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "3000:4173"
     depends_on:
       - backend
     environment:
-      - VITE_API_URL=http://localhost:3000
+      - VITE_API_URL=http://localhost:3001
     networks:
       - app-network
 
@@ -20,24 +20,19 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
-    environment:
-      - PORT=3001
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/url_shortener
-      - JWT_SECRET=your_jwt_secret
-      - JWT_EXPIRATION=1d
+    env_file:
+      - ./backend/.env
     depends_on:
-      - db
+      - postgres
     networks:
       - app-network
+    links:
+      - "postgres:database"
 
-  db:
+  postgres:
     image: postgres:15-alpine
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=url_shortener
+    env_file:
+      - ./backend/.env
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
