--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=
-DB_DATABASE=url_shortener
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=
+POSTGRES_DB=urlshortener
 PORT=3001
-BASE_URL=http://localhost:3001
+BASE_URL=https://localhost:3001
